# configure_dms_viz

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Snakefile  configure-dms-viz.py  pyproject.toml  setup.py
.github/workflows/: prerelease.yml  release.yml
configure_dms_viz/: configure_dms_viz.py  pdb_utils.py
notebooks/: test_configuration_utility.ipynb
tests/: README.md  Snakefile  test_cli.py  test_cli_pytest.py  test_formatting.py  test_pdb_utils.py
tests/HIV-Envelope-BF520-DMS/: README.md  datasets.csv
tests/HIV-Envelope-BF520-DMS/input/: 1-18_avg.csv  IDC508_avg.csv  IDC513_avg.csv  IDC561_avg.csv  IDF033_avg.csv  PGT151_avg.csv
tests/IAV-PB1-DMS/: README.md  datasets.csv
tests/IAV-PB1-DMS/input/: pb1_fitness.csv
tests/IAV-PB1-DMS/output/: IAV-PB1-DMS.json
tests/IAV-PB1-DMS/sitemap/: sitemap.csv
tests/PTEN-VAMPseq/: README.md  datasets.csv
tests/PTEN-VAMPseq/input/: PTEN-VAMPseq.csv
tests/PTEN-VAMPseq/output/: PTEN-VAMPseq.json
tests/SARS2-Mutation-Fitness/: README.md  datasets.csv
tests/SARS2-Mutation-Fitness/input/: E_fitness.csv  M_fitness.csv  N_fitness.csv  ORF10_fitness.csv  ORF1ab_fitness.csv  ORF3a_fitness.csv  ORF6_fitness.csv  ORF7a_fitness.csv  ORF7b_fitness.csv  ORF8_fitness.csv  ORF9b_fitness.csv  S_fitness.csv  nsp10_fitness.csv  nsp12 (RdRp)_fitness.csv  (+13 more)
tests/SARS2-Omicron-BA1-DMS/: README.md  datasets.csv
tests/SARS2-RBD-REGN-DMS/: README.md  datasets.csv
tests/dummy-data/: dummy.csv  dummyjoin.csv  dummymap.csv
tests/hiv/: experiments.csv  muteffects_observed.csv
tests/sars2/: experiments.csv
(+50 files in other folders)
